all apart from email and cronjob route is done
